# embree-solar

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  common.h  embree_solar.cpp  embree_solar.h  main.cpp  main.py  raytrace_solar.cpp  raytrace_solar.h  skycity.py  skydome.cpp  skydome.h  suncity.py  sunrays.cpp  sunrays.h  test.py  test_city.py
